# Ideations

./: .gitignore  CLAUDE.md  agent_design_v6.md  config.py  embedding_utils.py  logger.py  pyproject.toml  utils.py
.claude/prompts/: phase2_hypothesis.md  phase4_validation.md  phase5_scoring.md
.claude/skills/api-matcher/: SKILL.md
.claude/skills/catalog-manager/: SKILL.md
.claude/skills/market-validator/: SKILL.md
.claude/skills/publisher/: SKILL.md
.claude/skills/scorer/: SKILL.md
.claude/skills/signal-collector/: SKILL.md
data/: dashboard_batches.jsonl  feedback.jsonl  ideas_archive.jsonl
docs/: api_catalog_schema.md  scoring_formula.md
scripts/: _loop_runner.py  backfill_params.py  catalog_refresh.py  db_migrate.py  quality-gate-loop.ps1  run_engine.bat  run_engine.py  run_weekly_report.bat  scheduler_control.bat
server/: app.py
server/routers/: curation.py  feedback.py  health.py  ideas.py
server/schemas/: api_contracts.py
server/static/dashboard/: app.js  index.html  style.css
tests/: test_api_server.py  test_catalog.py  test_catalog_extended.py  test_concurrency.py  test_crawlers.py  test_data_flow.py  test_db_migrate.py  test_dedup.py  test_discord_alerts.py  test_e2e_pipeline.py  test_embeddings.py  test_feedback.py  test_matcher.py  test_observability.py  test_phase2.py  test_phase4.py  test_publisher.py  test_retry.py  test_scheduler.py  test_schemas.py  test_scorer.py  test_time_budget.py  test_utils.py  test_workflow.py
tests/fixtures/: sample_feedback.jsonl  sample_hypotheses.json  sample_signals.json  sample_validations.json
(+25 files in other folders)
