[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-ideation-engine"
version = "6.0.0"
description = "공공 데이터 API 기반 서비스 아이디어 자동 발굴 엔진"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "playwright==1.49.1",
    "sentence-transformers==3.4.1",
    "faiss-cpu==1.9.0",
    "numpy==2.2.1",
    "httpx==0.28.1",
    "orjson==0.10.13",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "freezegun==1.4.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
